Visiblity not updated for instanced collections #55163

Closed
opened 2018-05-23 15:11:39 +02:00 by Dalai Felinto · 4 comments

Blender Version

Broken: 7c5e174871 (blender2.8 HEAD)

Short description of error

Changing the visibility of instanced collections doesn't update.

Exact steps for others to reproduce the error

Open the following file and try to change the viewport visiblity of Collection 1.

visibility_collection.blend

Note: Things work well if you disable copy-on-write.

**Blender Version** Broken: 7c5e174871 (blender2.8 HEAD) **Short description of error** Changing the visibility of instanced collections doesn't update. **Exact steps for others to reproduce the error** Open the following file and try to change the viewport visiblity of Collection 1. [visibility_collection.blend](https://archive.blender.org/developer/F3440875/visibility_collection.blend) *Note: Things work well if you disable copy-on-write.*
Brecht Van Lommel was assigned by Dalai Felinto 2018-05-23 15:11:40 +02:00
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Author
Owner

Note: since b4b745b720 changing Collection 1 visibility works, but changing HP or LP collections visibility still does not.

Note: since b4b745b720 changing `Collection 1` visibility works, but changing `HP` or `LP` collections visibility still does not.

This issue was referenced by 3fb38d664b

This issue was referenced by 3fb38d664bcd88258706cb21af0d73b72869bfef

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#55163
No description provided.