Fix T55163: visibility not updated for instanced collections.